--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Arti</string>
     <string name="action_settings">Settings</string>
+    <string name="blutooth_not_supported">Este dispositivo no soporta Bluetooth</string>
+    <string name="connecting">Conectando...</string>
 </resources>
