--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="blutooth_not_supported">Este dispositivo no soporta Bluetooth</string>
     <string name="connecting">Conectando...</string>
+    <string name="paired_devices_title">Dispositivos emparejados</string>
 </resources>
