--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="device_list_scanning">Escaneando</string>
     <string name="device_list_none_paired">No se encontró dispositivos enlazados</string>
     <string name="monitor_not_connected">Sin conexión</string>
+    <string name="main_ask">Solicitar</string>
 </resources>
