ProcessHelper to use enum for different Processes Monitor use a TimerService for time announciation Activities make use of different process before end a whole beer crafting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="main_ask">Solicitar</string>
     <string name="title_activity_splash">Splash</string>
     <string name="main_asking_for_data">He pedido datos</string>
+    <string name="monitor_title">Monitor</string>
+    <string name="monitor_end_process">Finalizar</string>
 </resources>
