Modifications to create post request for manual densities entries

--- a/Android app/app/src/main/res/values/strings.xml
+++ b/Android app/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="kilogram_abreviature">Kg</string>
     <string name="grams_abreviature">gr</string>
     <string name="monitoring_log">Eventos</string>
-    <string name="density_added">Density has been added</string>
+    <string name="density_added">Density has been added: </string>
+    <string name="density_measure"> kg/m3</string>
 
 </resources>
