Added menu to MainActivity with preference option

--- a/Android app/app/src/main/res/values/strings.xml
+++ b/Android app/app/src/main/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="monitoring_log">Eventos</string>
     <string name="density_added">Density has been added: </string>
     <string name="density_measure"> kg/m3</string>
+    <string name="main_menu_preferences">Preferencias</string>
 
 </resources>
