--- a/Android app/app/src/main/res/values/strings.xml
+++ b/Android app/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="new_crafting_hops">Lúpulos</string>
     <string name="new_crafting_mashing">Maceración</string>
     <string name="new_crafting_step">Escalones</string>
-    <string name="ok">OK</string>
+    <string name="ok">Aceptar</string>
     <string name="title_item_picker">Escoge un tipo de cerveza</string>
     <string name="new_crafting_litre">Litros</string>
     <string name="add_cereal_kind">Cereal</string>
