--- a/Android app/app/src/main/res/values-en/strings.xml
+++ b/Android app/app/src/main/res/values-en/strings.xml
@@ -79,5 +79,8 @@
     <string name="preferences_saved">Preferences has been saved</string>
     <string name="preferences_not_saved">Preferences weren`t be updated</string>
     <string name="preferences_title">Preferences</string>
+    <string name="add_button">Add</string>
+    <string name="heat_added_with">A heat step was add with %1dºC</string>
+    <string name="main_menu_credits">Credits</string>
 
 </resources>
