--- a/Android app/app/src/main/res/values/strings.xml
+++ b/Android app/app/src/main/res/values/strings.xml
@@ -91,5 +91,10 @@
     <string name="litres_measure">mL</string>
     <string name="is_open">Abierto</string>
     <string name="is_closed">Cerrado</string>
+    <string name="communication_error">Hubo un error en la comunicación. Comprueba que la conexión funcione correctamente.</string>
+    <string name="command_start">El proceso ha sido iniciado</string>
+    <string name="command_open_valve">La válvula se ha abierto</string>
+    <string name="command_close_valve">La válvula se ha cerrado</string>
+    <string name="command_stop">El proceso ha finalizado</string>
 
 </resources>
